<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UAV GUI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Home">Home</string>
    <string name="map">A picture of a map</string>
    <string name="Dest">Dest</string>
    <string name="ObservationTime">Observation Time</string>
    <string name="Abort">Abort</string>
    <string name="Go">Go</string>
    <string name="sample">hh:mm:ss</string>

</resources>
